--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
@@ -22,7 +22,7 @@
       <h3>
 <a id="foomoo-what-in-the-world-is-that" class="anchor" href="#foomoo-what-in-the-world-is-that" aria-hidden="true"><span class="octicon octicon-link"></span></a>FooMoo? What in the world is that?</h3>
 
-<p>Imagine Linsen is sitting at his desk in a cabin in the mountains of Colorado enjoying a ranked game of League of Legends, when suddenly an urge of hunger appears. Linsen goes "I'm hungry! I want food!" So he hits up his best friend Jane, who's busy climbing mountains 2.76 miles away. He whips out his Samsung Galaxy S6 Edge and fires a text to Jane.  "I'm hungry Jane! Let's get some falafel." Jane gags and nearly falls off a steep incline.  "Nasty. I want fettuccine alfredo." Linsen lets out an exasperated fart.  He's glucose and lactose intolerant. They continue to bicker for the next 15 minutes while Linsen's League of Legends team sends expletives at his lack of response and Jane's brother Andrew continues to ascend without her at an alarming pace.</p>
+<p>Imagine Linsen is sitting at his desk in a cabin in the mountains of Colorado enjoying a ranked game of League of Legends, when suddenly an urge of hunger appears. Linsen goes "I'm hungry! I want food!" So he hits up his best friend Jane, who's busy climbing mountains 2.76 miles away. He whips out his Samsung Galaxy S6 Edge and fires a text to Jane.  "I'm hungry Jane! Let's get some falafel." Jane gags and nearly falls off a steep incline.  "Nasty. I want fettuccine alfredo." Linsen lets out an exasperated fart.  He's glucose and lactose intolerant. They continue to bicker for the next 15 minutes while Linsen's League of Legends team sends expletives at his lack of response and Jane's brother Andrew continues to ascend without her at an alarming pace.<img src="story_pic.jpg" /></p>
 
 <h3>
 <a id="its-a-solution" class="anchor" href="#its-a-solution" aria-hidden="true"><span class="octicon octicon-link"></span></a>It's a Solution!</h3>
