change title tag

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">FooMoo</h1>
-      <h2 class="project-tagline">FooMoo hoo hoo hee hee haa haa</h2>
+      <h2 class="project-tagline">Connecting Food and Friends</h2>
       <a href="https://github.com/wilbertthelam/FooMoo" class="btn">View on GitHub</a>
       <a href="https://github.com/wilbertthelam/FooMoo/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/wilbertthelam/FooMoo/tarball/master" class="btn">Download .tar.gz</a>
